<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">EcomAdventure</string>
    <string name="login">Login</string>
    <string name="enter_email_id">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_pwd">Forget Password?</string>
    <string name="or">&#160;&#160;OR&#160;&#160;</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="whatsapp_icon">Whatsapp Icon</string>
    <string name="don_have_account">Don\'t have account ?</string>
    <string name="sign_up">SignUp</string>
    <string name="enter_email">Email</string>
    <string name="enter_user_name">Username</string>
    <string name="enter_address">Address</string>
    <string name="password">Password</string>
    <string name="forget_pwd_title">Forget Password?</string>
    <string name="forget_password_guide">Enter Valid Username</string>
    <string name="submit">Submit</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_guide">Enter One Time Password Sent On Registered Phone Number </string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_updated">Password Updated</string>
    <string name="rest_password_success_msg">Your Password has been updated successfully !</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_underline"><u><b><i>Login</i></b></u></string>
    <string name="sign_up_underline"><u><b><i>SignUp</i></b></u></string>
    <string name="back">Back</string>
    <string name="forget_pwd_logo">Forget Password Logo</string>
    <string name="icon">Icon</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favorite</string>
    <string name="toolbar">ToolBar</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner_images">Banner Images</string>
    <string name="bungee_jumping">Bungee Jumping</string>
    <string name="skiing">Skiing</string>
    <string name="caving">Caving</string>
    <string name="desert_camping">Desert Camping</string>
    <string name="services">Services</string>
    <string name="bungee_jumping_image_des">Bungee jumping image description</string>
    <string name="goa">Bungee jumping in goa</string>
    <string name="goa_bungee_des">One of the most thrilling and adventurous sport apart from all the watersports that you should definitely not miss while in goa</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="per_person_per_night">/person/night</string>
    <string name="random_number">3000</string>
    <string name="view_details">View Details</string>
    <string name="book_now">Book Now</string>
    <string name="location">location logo</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="no_of_tickets">No of Tickets</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="date">Choose Date</string>
    <string name="date_hint">dd/mm/yy</string>
    <string name="make_paymnet">Make Payment</string>
    <string name="about_us_des">
        From 2012 to 2021 Our leadership team worked with many corporates, colleges, schools and institutions to organise adventure group trips and
        in these 9 years we understood HOTELS are old and conventional and people are looking for more experimental places to spend their vacations
        but hard to discover.\n\n After intensive ground work for more than 2 years, we discovered a lot of Camping Sites, Igloos, Homestays, Cottages
        exist at most uncrowded and virgin destination, which can\'t be discovered if you have never been there. We thought to make these stays available by
        making it more organised keeping in mind amenities, safety and cleanliness.
    </string>
    <string name="bj_in_goa">BUNGEE JUMPING IN GOA</string>
    <string name="bj_in_delhi">BUNGEE JUMPING IN DELHI</string>
    <string name="bj_in_lonavala">BUNGEE JUMPING IN LONAVALA</string>

    <string name="bj_des_goa">One of the most thrillig and adventures sport apart from all the water sports that you should definitely try.</string>
    <string name="bj_des_delhi">Wanderlust is the provider for this sport. All the equipment is imported from Japan and all staff are very skilled.</string>
    <string name="bj_des_lonavala">Bungee Jumping takes place in an adventure park called Della Adventures. The equipments attached at a safe height.</string>
    <string name="unique_stay">Unique Stays</string>
    <string name="adventure_sport">Adventure Sports</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="verified_and_stay">Verified and Stay</string>
    <string name="customer_supprt">24 x 7 Support</string>
    <string name="customer_service_offer">Things we offer to our Customers</string>
    <string name="adventures">Adventures</string>
    <string name="food_and_drink">Food and Drink</string>
    <string name="safety_guide">Safety Guide</string>
    <string name="adventures_service">while providing you with tons of new experiences, we provide best adventure places in India.</string>
    <string name="food_and_drink_service">We provide high quality food and beverages in friendly and welcoming atmosphere.</string>
    <string name="safety_guide_ser">We believe Safety and Security are vital to providing quality in happy tourism.</string>
    <string name="customer_support_service">We provide 24 x 7 service to our customers via  phone call or  whatsapp.</string>
    <string name="enter_phone_no">Phone</string>
    <string name="user_authenticate">User Authentication</string>
    <string name="verify_otp_description">Enter OTP sent of your entered mobile number.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="web_client_id">723466106200-r6b4snkljcoe5q7eubud94chsai6ihcr.apps.googleusercontent.com</string>
    <string name="change_password">Change Password</string>
    <string name="click_here_change_password">Click to Change Password</string>
    <string name="history">My Adventures</string>
    <string name="transaction_status">Transaction Status: </string>
    <string name="status">Status</string>
    <string name="transaction_id">TRANSACTION ID:</string>
    <string name="chatbot">FAQ</string>


</resources>