<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_abount_us"
            android:icon="@drawable/ic_baseline_ballot_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_drawer_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favorite_drawer_icon"
            android:title="@string/favourite" />
    </group>
</menu>