<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:padding="10dp"
    tools:context=".ServicesFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:layout_width="240dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/orange"
                android:clickable="false"
                android:elevation="10dp"
                android:focusable="false"
                android:fontFamily="@font/bungee"
                android:gravity="center"
                android:text="@string/services"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Triangle" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/climbing_adventure_silhouette_svgrepo_com" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/adventures"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/adventures_service"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:textStyle="italic"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/fast_food_svgrepo_com" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/food_and_drink"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/food_and_drink_service"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:textStyle="italic"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/book_svgrepo_com" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/safety_guide"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/safety_guide_ser"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:textStyle="italic"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/customer_service_svgrepo_com" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/customer_supprt"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold|italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/customer_support_service"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:textStyle="italic"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>