<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".BookingDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_of_tickets_ttile"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:fontFamily="@font/baloo_tamma"
                android:gravity="center"
                android:text="@string/no_of_tickets"
                android:textColor="@color/orange2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ticketDecrBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:background="@drawable/book_now_button"
                android:gravity="center"
                android:onClick="decrementTicketCount"
                android:text="@string/minus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no_of_ticket_txtview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/ticketIncrBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/book_now_button"
                android:gravity="center"
                android:onClick="incrementTicketCount"
                android:text="@string/plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/booking_date_title"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo_tamma"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/orange2"
            android:textSize="30sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/booking_date"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:hint="@string/date_hint"
            android:textAlignment="center"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/makePaymentBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/book_now_button"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/make_paymnet"
            android:textAlignment="center"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>